--- a/filmu-nuoma-web/package.json
+++ b/filmu-nuoma-web/package.json
@@ -9,7 +9,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.6.5",
     "rc-switch": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -17,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "sequelize": "^6.35.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
