--- a/filmu-nuoma-web/package.json
+++ b/filmu-nuoma-web/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
     "rc-switch": "^4.1.0",
     "react": "^18.2.0",
