--- a/filmu-nuoma-web/package.json
+++ b/filmu-nuoma-web/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "react-share": "^5.0.3",
     "sequelize": "^6.35.2",
     "web-vitals": "^2.1.4"
   },
