--- a/filmu-nuoma-web/package.json
+++ b/filmu-nuoma-web/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.5",
+    "otpauth": "^9.2.1",
+    "qrcode": "^1.5.3",
     "rc-switch": "^4.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -25,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-share": "^5.0.3",
     "sequelize": "^6.35.2",
+    "thirty-two": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
