--- a/filmu-nuoma-web/package.json
+++ b/filmu-nuoma-web/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "mysql2": "^3.6.5",
     "otpauth": "^9.2.1",
     "qrcode": "^1.5.3",
